Ignore Detekt `MemberNameEqualsClassName`. For test method `T.t`.

--- a/tools/detekt/detekt.yml
+++ b/tools/detekt/detekt.yml
@@ -80,6 +80,8 @@ naming:
   FunctionNaming:
     active: true
     ignoreAnnotated: ['Composable']
+  MemberNameEqualsClassName:
+    active: false
 
 performance:
   SpreadOperator:
